- Updated saplings to the new daily growth system.
- Added aspen, willow, and redwood wood types.
    - Aspen saplings are made with a birch sapling, orange dye, and a fertilizer (bonemeal or fertilizer) in a cauldron.
    - Willow saplings are made with an oak sapling, green dye, and a fertilizer.
    - Redwood saplings are made with a spruce sapling, red dye, and a fertilizer.
- Changed existing cherry wood type to be dark oak, and added a new cherry wood type.
    - Dark oak saplings are made with an oak sapling, black dye (or ink sac), and a fertilizer.
- Changed red autumn saplings to be made with a dark oak sapling instead of a cherry sapling.
- Added the ability for birch, cherry, hazel, and autumn trees to grow into big variants like oak trees can.
- Added the ability for oak, spruce, birch, cherry, hazel, and autumn trees to grow into huge variants when placed in a 2x2.
- Changed the texture of mahogany leaves.
- Fixed an issue where fir planks were associated with hazel sub-blocks.
- Fixed an issue where some work stumps still turned into oak chewed logs.
- Fixed an issue where hazel and fir barrels were missing translation entries.

## Version 4.0.0 ##
Deco as of 4.0.0 is now a fabric mod, without any base class edits, and as such can simply be placed in the mods folder to install.

Some textures in this release have been used or modified from the following sources according to their license:
- Blockus
- Terra Incognita
- Quark
- Wild Nature
- Biome Makeover
- Compat Makeover

- Rewrote the addon from scratch as a fabric mod. Note that data is stored in the same way, and thus it is save-compatible (it is still a good idea to back up your worlds before updating).
- Added a config option, disabled by default, to allow diamond pickaxes to always pick up stone intact instead of requiring isolation.
- Added glazed terracotta pillars, crafted with two glazed terracotta in a vertical line.